fix: Fix text overflow in blog list

--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -26,7 +26,7 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-  grid-auto-rows: 170px;
+  grid-auto-rows: 200px;
   gap: 0.5rem;
 }
 
